# DGS

./: .gitignore  README.md  account_creation.py  main.py  notebook.ipynb  pyproject.toml
core/: __init__.py  account_creation.py  constants.py  utils.py
tests/: test_main.py
